<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/guitarFragment"
            android:icon="@drawable/ic_menu_guitar"
            android:title="@string/action_guitar" />
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/action_list" />


    </group>

    <item android:title="@string/locations_services">
        <menu>

<!--
                clicking this item in the nav drawer inflates mapFragment layout
                from main_navigation, which opens the map in fragment_map
--><item
                android:id="@+id/mapFragment"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/menu_addGuitar"
                app:showAsAction="always"/>
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_about" />
        </menu>
    </item>
    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />

            <item
                android:id="@+id/toggleGuitars"
                android:title="mode_toggle"
                app:actionLayout="@layout/togglebutton_layout"
                app:showAsAction="always" />

        </menu>
    </item>
</menu>
